audit implementation